EPUB/Snapshot: Prevent long-press popup on iOS

--- a/src/dom/common/stylesheets/inject.scss
+++ b/src/dom/common/stylesheets/inject.scss
@@ -1,3 +1,7 @@
+body {
+	-webkit-touch-callout: none !important;
+}
+
 body.resizing-annotation, body.creating-touch-annotation {
 	&, & * {
 		user-select: none !important;
